Removed absolute path references.

--- a/assets/css/twentyfive.css
+++ b/assets/css/twentyfive.css
@@ -11,12 +11,12 @@
 
   @font-face {
     font-family: AlexBrush;
-    src: url('/assets/fonts/AlexBrush-Regular.ttf');
+    src: url('../fonts/AlexBrush-Regular.ttf');
   }
 
   @font-face {
     font-family: Monofonto;
-    src: url('/assets/fonts/monofonto.otf');
+    src: url('../fonts/monofonto.otf');
   }
 
 
